# G5_Ordenacao_EDA2-2026.1

./: .gitignore  CMakeLists.txt  README.md
src/: DataManager.h  MergeSort.h  PerformerTimer.h  RadixSort.h  main.cpp
